--- a/index.html/index.html
+++ b/index.html/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BeckieTee Global — Our Story & Portfolio</title>
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
@@ -229,6 +230,7 @@
   </style>
 </head>
 <body>
+
   <header>
     <div class="nav-container">
       <div class="nav-brand">BeckieTee Global</div>
@@ -258,10 +260,10 @@
     <section id="gallery">
       <h2>Gallery</h2>
       <div class="gallery">
-        <img src="OGI 1.jpg"Pap in bowl texture close-up">
-        <img src="OGI 2.jpg"Fresh homemade pap texture">
-        <img src="OGI 3.jpg" alt="Preparing pap ingredients">
-        <img src="OGI 4.jpg" alt="Pap being served">
+        <img src="https://images.openai.com/thumbnails/url/Si6dj3icu1mUUVJSUGylr5-al1xUWVCSmqJbkpRnoJdeXJJYkpmsl5yfq5-Zm5ieWmxfaAuUsXL0S7F0Tw4MN80ytTCwdEwsMUwtdfcrKdT1TCo2cS6v8jG1zDaPNAoozjaqqHQu0U12Mc0J8UnJNs4xLXNMd_ZQKwYAopMoSg" alt="Pap in bowl texture close-up">
+        <img src="https://images.openai.com/thumbnails/url/mD3PZHicu1mSUVJSUGylr5-al1xUWVCSmqJbkpRnoJdeXJJYkpmsl5yfq5-Zm5ieWmxfaAuUsXL0S7F0Tw5OLS4uNUqp8k3Kd6-syDH0ikxy9TEqSszMTKnKTTUv8ioODza2dE6sqvAvzykodyoyqcwv9zE3q_TLcFQrBgBUZStf" alt="Fresh homemade pap texture">
+        <img src="https://images.openai.com/thumbnails/url/BlOCWHicu1mSUVJSUGylr5-al1xUWVCSmqJbkpRnoJdeXJJYkpmsl5yfq5-Zm5ieWmxfaAuUsXL0S7F0Tw50C49ILSt2D87IKzW2TMmyzA82C05JjcjN8_Q2T0kPzvTNz8t0yyzzKA3xykzxKgsIDMoNCw8oKzKtClQrBgA5rCr7" alt="Preparing pap ingredients">
+        <img src="https://images.openai.com/thumbnails/url/OTrcUHicu1mUUVJSUGylr5-al1xUWVCSmqJbkpRnoJdeXJJYkpmsl5yfq5-Zm5ieWmxfaAuUsXL0S7F0Tw4sSfdMLjU0Mi0wCE3Oz8wyKkvxS_WPTM1wDQvLTEwLLI33dsr2TPZ19cvP1s1xCwlLT_P1dHQyNPNQKwYA0XkpBA" alt="Pap being served">
       </div>
     </section>
 
@@ -269,7 +271,7 @@
     <section id="product">
       <h2>Our Product</h2>
       <div class="project">
-        <img src="OGI.jpeg" alt="BeckieTee Spiced Powdered Pap 500g pack">
+        <img src="/mnt/data/E68EBA45-56A0-4759-A141-DDCCA875D0E0.jpeg" alt="BeckieTee Spiced Powdered Pap 500g pack">
         <div class="project-details">
           <h3>BeckieTee Spiced Powdered Pap (500g)</h3>
           <p>Our spiced powdered pap is made from yellow corn, ginger, bay leaves, and cloves. No preservatives, no additives. Hand-packed to preserve natural flavor and health benefits.</p>
@@ -294,11 +296,11 @@
       <div class="testimonials">
         <div class="testimonial">
           <p>"I love this pap! The spices make it taste even better than homemade. My kids ask for it every morning."</p>
-          <div class="author">— Olutayo. A, Lagos</div>
+          <div class="author">— Aisha A., Lagos</div>
         </div>
         <div class="testimonial">
           <p>"Been using BeckieTee for 3 months. No additives. I trust it with my family’s health."</p>
-          <div class="author">— Morakinyo A., Abuja</div>
+          <div class="author">— Chinedu U., Abuja</div>
         </div>
       </div>
     </section>
@@ -326,7 +328,7 @@
         <ul>
           <li>Email: <a href="mailto:info@beckietee.com">info@beckietee.com</a></li>
           <li>Phone / WhatsApp: +234 803 561 5918</li>
-          <li>Address: Oke-Ilewo, Abeokuta, Nigeria</li>
+          <li>Address: Alimosho, Lagos, Nigeria</li>
         </ul>
         <p>Connect with us on social media:</p>
         <ul>
